Travel::Status::DE::DBRIS 0.10 - Sat Apr 19 2025

    * Journey: Add train_no, line_no accessors

Travel::Status::DE::DBRIS 0.09 - Sat Apr 05 2025

    * dbris-m: Handle departures with undefined destination
    * Location: Handle negative coordinate values

Travel::Status::DE::DBRIS 0.08 - Tue Mar 25 2025

    * Journey: Add id accessor
    * Journey: Retrieve train/line number from journey ID if it is not provided
      by the API

Travel::Status::DE::DBRIS 0.07 - Sun Mar 23 2025

    * New optional recommended module: GIS::Distance (for Journey->polyline)
    * Location: Extract lat/lon from location ID, if needed
    * Journey: Add polyline accessor; enhance it if GIS::Distance is available
    * Journey: Add type, number accessors
    * dbris-m: Add --with-polyline option

Travel::Status::DE::DBRIS 0.06 - Sat Mar 01 2025

    * DBRIS: Fix new_p constructor
    * JourneyAtStop->via: return list, not arrayref
    * dbris-m: support raw station IDs as input

Travel::Status::DE::DBRIS 0.05 - Mon Feb 03 2025

    * Journey, Location: Add missing conversions to TO_JSON
    * dbris-m: Fix --json

Travel::Status::DE::DBRIS 0.04 - Sat Feb 01 2025

    * Add Travel::Status::DE::DBRIS::Formation and submodules to this
      distribution (formerly Travel::Status::DE::DBWagenreihung)
    * dbris-m: Run "dbris-m station train_type train_no" to list train
      details and (if available) carriage formation

Travel::Status::DE::DBRIS 0.02 - Sat Jan 25 2025

    * dbris-m: Add -m / --modes-of-transit option
    * dbirs-m: Fix --json

Travel::Status::DE::DBRIS 0.01 - Mon Jan 06 2025

    * Initial release
    * Supports station board requests, trip details, and station search